k8s/apps/stay-tuned/resources/deployment-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-infra

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: infra
  template:
    metadata:
      labels:
        app: infra
    spec:
      containers:
        - name: river-ui
          image: ghcr.io/riverqueue/riverui:0.20.0@sha256:b4ba3f30b5c0e8e24cd71d1b4c30e7d52dd096e4cd523b405ed91b49e6cb9814
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
