k8s/apps/stay-tuned/resources/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-worker

spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/slashnephy/stay-tuned-server:initial@sha256:707db7585985d41376327f3b0e805efb5e7c4ffb576e62854d20fa7071abfe39
          command:
            - /backend/worker
          volumeMounts:
            - name: records
              mountPath: /backend/records
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: records
          hostPath:
            path: /mnt/pool/records
            type: DirectoryOrCreate
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
      terminationGracePeriodSeconds: 7200
