k8s/apps/stay-tuned/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: server
          image: ghcr.io/slashnephy/stay-tuned-server:initial@sha256:5306a41e44c1fb4721370b5f0325edf8ff323dbe0f95a03c1788fec4eb323d4a
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          securityContext:
            allowPrivilegeEscalation: false
        - name: worker
          image: ghcr.io/slashnephy/stay-tuned-server:initial@sha256:5306a41e44c1fb4721370b5f0325edf8ff323dbe0f95a03c1788fec4eb323d4a
          command:
            - /backend/worker
          volumeMounts:
            - name: records
              mountPath: /backend/records
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: records
          hostPath:
            path: /mnt/pool/records
            type: DirectoryOrCreate
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
