k8s/apps/stay-tuned/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server

spec:
  selector:
    app: default
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: river-ui

spec:
  selector:
    app: infra
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      protocol: TCP
