k8s/apps/stay-tuned/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`stay-tuned-api.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    # bot のクロールを抑止するため robots.txt を返す。
    - kind: Rule
      match: Host(`stay-tuned-river.starry.blue`) && Path(`/robots.txt`)
      priority: 100
      services:
        - name: robots-txt
          namespace: traefik
          port: http

    - kind: Rule
      match: Host(`stay-tuned-api.starry.blue`)
      services:
        - name: server
          port: 8080

    - kind: Rule
      match: Host(`stay-tuned-river.starry.blue`)
      services:
        - name: river-ui
          port: 8080
      middlewares:
        - name: forward-auth-authentik
          namespace: authentik

    - kind: Rule
      match: Host(`stay-tuned-river.starry.blue`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: http
